# kiwoom-proxy

./: .gitignore  README.md  TODO.md  __main__.py  analyzer.py  analyzer_const.py  kiwoom_proxy.py  kiwoom_proxy.spec  manager.py  pyproject.toml  start.py  test.py
kiwoombot/: analyzer.py  manager.py  start.py
kiwoombot/market/: client_signal_handler.py  kiwoom_api_utils.py  market.py  market_data.py  market_manager.py
kiwoombot/strategies/: strategy.py  strategy_buy_hold_sell.py  strategy_manager.py  strategy_sangdda.py
kiwoomproxy/: client_handler.py  decorators.py  kiwoom_ocx.py  manager.py  proxy.py  server_handler.py  utils.py
market/: client_signal_handler.py  decorators.py  kiwoom_api_const.py  kiwoom_api_utils.py  market.py  market_data.py  market_manager.py  server_signal_handler.py
src/: __main__.py  analyzer.py  analyzer_const.py  manager.py
src/market/: __init__.py  kiwoom_ocx.py  market.py  market_data.py  market_manager.py  server_signal_handler.py
src/strategies/: __init__.py  strategy_buy_hold_sell.py  strategy_buy_hold_sell_const.py  strategy_sangdda.py  strategy_sangdda_const.py
strategies/: __init__.py  strategy.py  strategy_buy_hold_sell.py  strategy_buy_hold_sell_const.py  strategy_factory.py  strategy_manager.py  strategy_sangdda.py  strategy_sangdda_const.py  strategy_test.py
tests/: E2E_test.py  mock_kiwoom_ocx.py  mock_market.py  mock_market_const.py  mock_market_manager.py  mocked_E2E_test.py
