[tool.poetry]
name = "kiwoombot"
version = "0.1.0"
description = ""
authors = ["joshua5301"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"
mplfinance = "^0.12.10b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
